--- a/src/components/incomestatement.css
+++ b/src/components/incomestatement.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f7f7f7;
+  background-color: #000000;
   margin: 0;
   padding: 0;
   width: 100%; 
