--- a/src/components/trialbalance.css
+++ b/src/components/trialbalance.css
@@ -7,7 +7,7 @@
 }
 .trial-balance-table-cell{background-color: rgb(255, 255, 255);
 }
-
+.mose{background-color: black;}
 /* Title styling */
 .trial-balance-title {
   font-size: 2rem;
